# ckanext-themeGeoportalKGT

./: MANIFEST.in  README.md  dev-requirements.txt  setup.cfg  setup.py  test.ini  themegeoportalkgt - Verknüpfung.lnk
ckanext/themegeoportalkgt/: cli.py  helpers.py  plugin.py  views.py
ckanext/themegeoportalkgt/assets/: script.js  webassets.yml
ckanext/themegeoportalkgt/logic/: action.py  auth.py  schema.py  validators.py
ckanext/themegeoportalkgt/public/: Thumbs.db  cookie.js  layerstack.css  layerstack_view_edit.js  themegeoportalkgt.css
ckanext/themegeoportalkgt/ressources/: json-list-of-licenses.json
ckanext/themegeoportalkgt/templates/: base.html  cookie.html  footer.html  header.html  page.html  privacy.html  simple_language.html
ckanext/themegeoportalkgt/templates/home/: layout2.html
ckanext/themegeoportalkgt/templates/home/snippets/: featured_organization.html  group_list.html  search.html  tag_gallery.html  tag_gallery_stats.html
ckanext/themegeoportalkgt/templates/package/: read_base.html  search.html
ckanext/themegeoportalkgt/templates/package/snippets/: resource_upload_field.html  resource_view.html
ckanext/themegeoportalkgt/templates/snippets/: cookie.html  facet_list.html  resource_view.html  social.html
ckanext/themegeoportalkgt/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/themegeoportalkgt/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext_themeGeoportalKGT.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
