[metadata]
name = ckanext-themeGeoportalKGT
version = 0.0.1
description = Theme for the Open Data Portal of the new Geoportal Kreis Guetersloh
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com//ckanext-themeGeoportalKGT
author = Kreis Guetersloh, 4.1.4
author_email = gis@kreis-guetersloh.de
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN OPenData Theme KreisGuetersloh

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             themegeoportalkgt = ckanext.themegeoportalkgt.plugin:ThemegeoportalkgtPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/themegeoportalkgt/i18n/ckanext-themegeoportalkgt.pot
width = 80

[init_catalog]
domain = ckanext-themegeoportalkgt
input_file = ckanext/themegeoportalkgt/i18n/ckanext-themegeoportalkgt.pot
output_dir = ckanext/themegeoportalkgt/i18n

[update_catalog]
domain = ckanext-themegeoportalkgt
input_file = ckanext/themegeoportalkgt/i18n/ckanext-themegeoportalkgt.pot
output_dir = ckanext/themegeoportalkgt/i18n
previous = true

[compile_catalog]
domain = ckanext-themegeoportalkgt
directory = ckanext/themegeoportalkgt/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
